[package]
name = "enigma"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true